<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wootric_tv_nps_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wootric_dialog_header_background"
        android:textColor="@android:color/white"
        android:textSize="@dimen/wootric_dialog_header_text_size"
        android:padding="@dimen/wootric_dialog_header_padding"
        android:text="@string/wootric_example_nps_question"/>

    <RelativeLayout
        android:id="@+id/wootric_nps_layout_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/wootric_nps_layout_body_padding"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/wootric_score_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/wootric_score_layout_height"
            android:orientation="horizontal"/>

        <com.wootric.androidsdk.views.RatingBar
            android:id="@+id/wootric_rating_bar"
            android:layout_below="@+id/wootric_score_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:id="@+id/wootric_anchor_not_likely"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wootric_rating_bar"
            android:textColor="@android:color/black"
            android:alpha="0.38"
            android:layout_marginBottom="@dimen/wootric_anchors_margin_bottom"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/wootric_anchors_text_size"
            android:text="@string/wootric_example_anchor_not_likely"/>

        <TextView
            android:id="@+id/wootric_anchor_likely"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wootric_rating_bar"
            android:textColor="@android:color/black"
            android:alpha="0.38"
            android:layout_marginBottom="@dimen/wootric_anchors_margin_bottom"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/wootric_anchors_text_size"
            android:text="@string/wootric_example_anchor_likely"/>

        <TextView
            android:id="@+id/wootric_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:alpha="0.26"
            android:enabled="false"
            android:text="@string/wootric_example_btn_submit"/>

        <TextView
            android:id="@+id/wootric_btn_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/wootric_btn_submit"
            android:layout_toStartOf="@+id/wootric_btn_submit"
            android:textColor="@color/wootric_dialog_header_background"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/wootric_button_margin"
            android:layout_marginEnd="@dimen/wootric_button_margin"
            android:text="@string/wootric_example_btn_dismiss"/>

    </RelativeLayout>
</LinearLayout>