<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/wootric_tv_feedback_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wootric_dialog_header_background"
        android:textColor="@android:color/white"
        android:textSize="@dimen/wootric_dialog_header_text_size"
        android:padding="@dimen/wootric_dialog_header_padding"/>

    <RelativeLayout
        android:id="@+id/wootric_feedback_layout_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/wootric_nps_layout_body_padding"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/wootric_et_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@drawable/wootric_feedback_hint"
            android:textCursorDrawable="@drawable/wootric_feedback_cursor"
            android:layout_alignParentTop="true"
            android:maxLines="10"
            android:textSize="@dimen/wootric_et_feedback_text_size"
            android:paddingBottom="@dimen/wootric_et_feedback_padding"
            android:paddingTop="@dimen/wootric_et_feedback_padding"
            android:hint="@string/wootric_example_followup_placeholder"/>

        <TextView
            android:id="@+id/wootric_btn_edit_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/wootric_dialog_header_background"
            android:layout_alignParentBottom="true"
            android:text="@string/wootric_example_btn_edit_score" />

        <TextView
            android:id="@+id/wootric_btn_dismiss_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/wootric_btn_submit_feedback"
            android:layout_toStartOf="@+id/wootric_btn_submit_feedback"
            android:textColor="@color/wootric_dialog_header_background"
            android:layout_marginRight="@dimen/wootric_button_margin"
            android:layout_marginEnd="@dimen/wootric_button_margin"
            android:layout_alignParentBottom="true"
            android:text="@string/wootric_example_btn_dismiss"/>

        <TextView
            android:id="@+id/wootric_btn_submit_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black"
            android:alpha="0.26"
            android:enabled="false"
            android:layout_alignParentBottom="true"
            android:text="@string/wootric_example_btn_submit"/>

    </RelativeLayout>

    <include layout="@layout/wootric_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>