<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wootric_btn_edit_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wootric_survey_layout_header_background"
                    android:drawableLeft="@drawable/ic_wootric_left_arrow"
                    android:drawableStart="@drawable/ic_wootric_left_arrow"
                    android:drawablePadding="@dimen/wootric_edit_button_drawable_padding"
                    android:paddingStart="@dimen/wootric_edit_button_padding_left"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:paddingLeft="@dimen/wootric_edit_button_padding_left"
                    android:paddingTop="@dimen/wootric_edit_button_padding_top"
                    android:text="@string/wootric_example_btn_edit_score"
                    android:fontFamily="@font/ibmplexsans"
                    android:textColor="@color/edit_score_color"
                    android:textSize="@dimen/wootric_button_text" />

                <TextView
                    android:id="@+id/wootric_survey_layout_tv_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/wootric_survey_layout_header_background"
                    android:padding="@dimen/wootric_survey_layout_header_padding"
                    android:text="@string/wootric_example_nps_question"
                    android:fontFamily="@font/ibmplexsans"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/wootric_survey_layout_header_text_size" />
            </LinearLayout>

            <com.wootric.androidsdk.views.phone.ThankYouLayout
                android:id="@+id/wootric_thank_you_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wootric_survey_layout_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:id="@+id/wootric_score_layout"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/wootric_score_layout_height"
                    android:layout_marginEnd="@dimen/wootric_score_layout_margin_end"
                    android:layout_marginLeft="@dimen/wootric_score_layout_margin_left"
                    android:layout_marginRight="@dimen/wootric_score_layout_margin_right"
                    android:layout_marginStart="@dimen/wootric_score_layout_margin_start"
                    android:layout_marginTop="@dimen/wootric_score_layout_margin_top"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.wootric.androidsdk.views.phone.RatingBar
                    android:id="@+id/wootric_rating_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/wootric_rating_bar_layout_margin_end"
                    android:layout_marginLeft="@dimen/wootric_rating_bar_layout_margin_left"
                    android:layout_marginRight="@dimen/wootric_rating_bar_layout_margin_right"
                    android:layout_marginStart="@dimen/wootric_rating_bar_layout_margin_start"
                    android:layout_marginTop="@dimen/wootric_rating_bar_layout_margin_top"
                    android:gravity="center"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wootric_score_layout" />

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/wootric_anchors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/wootric_not_likely_layout_margin_left"
                    android:layout_marginStart="@dimen/wootric_not_likely_layout_margin_start"
                    android:layout_marginEnd="@dimen/wootric_likely_layout_margin_end"
                    android:layout_marginRight="@dimen/wootric_likely_layout_margin_right"
                    android:layout_marginTop="@dimen/wootric_likely_layout_margin_top"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/wootric_rating_bar">

                    <TextView
                        android:id="@+id/wootric_anchor_not_likely"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wootric_example_anchor_not_likely"
                        android:fontFamily="@font/ibmplexsans"
                        android:textColor="@color/wootric_anchors"
                        android:textSize="@dimen/wootric_anchors_text_size"
                        android:maxLines="2"
                        android:layout_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <TextView
                        android:id="@+id/wootric_anchor_likely"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="2"
                        android:text="@string/wootric_example_anchor_likely"
                        android:fontFamily="@font/ibmplexsans"
                        android:textColor="@color/wootric_anchors"
                        android:textSize="@dimen/wootric_anchors_text_size"
                        android:textAlignment="textEnd"
                        app:layout_constraintRight_toRightOf="parent" />
                </LinearLayout>

                <com.wootric.androidsdk.views.driverpicklist.DriverPicklist
                    android:id="@+id/wootric_driver_picklist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:layout_constraintTop_toBottomOf="@+id/wootric_anchors" />

                <EditText
                    android:id="@+id/wootric_et_feedback"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/wootric_et_feedback_margin_end"
                    android:layout_marginLeft="@dimen/wootric_et_feedback_margin_left"
                    android:layout_marginRight="@dimen/wootric_et_feedback_margin_right"
                    android:layout_marginStart="@dimen/wootric_et_feedback_margin_start"
                    android:layout_marginTop="@dimen/wootric_et_feedback_margin_top"
                    android:hint="@string/wootric_example_followup_placeholder"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:background="@drawable/wootric_feedback_edit_text_background"
                    android:maxLines="1"
                    android:nextFocusLeft="@id/wootric_et_feedback"
                    android:nextFocusUp="@id/wootric_et_feedback"
                    android:paddingBottom="@dimen/wootric_et_feedback_padding"
                    android:paddingTop="@dimen/wootric_et_feedback_padding"
                    android:fontFamily="@font/ibmplexsans"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/wootric_feedback_cursor"
                    android:textSize="@dimen/wootric_et_feedback_text_size"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wootric_driver_picklist" />

                <TextView
                    android:id="@+id/wootric_btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="@dimen/wootric_button_margin_right"
                    android:layout_marginTop="@dimen/wootric_button_margin_top"
                    android:alpha="0.26"
                    android:enabled="false"
                    android:padding="@dimen/wootric_btn_padding"
                    android:text="@string/wootric_example_btn_submit"
                    android:fontFamily="@font/ibmplexsans"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/wootric_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wootric_et_feedback" />

                <TextView
                    android:id="@+id/wootric_btn_dismiss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="@dimen/wootric_dismiss_button_margin_right"
                    android:layout_marginTop="@dimen/wootric_button_margin_top"
                    android:padding="@dimen/wootric_btn_padding"
                    android:text="@string/wootric_example_btn_dismiss"
                    android:fontFamily="@font/ibmplexsans"
                    android:textColor="@color/wootric_survey_layout_header_background"
                    android:textSize="@dimen/wootric_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/wootric_btn_submit"
                    app:layout_constraintTop_toBottomOf="@+id/wootric_et_feedback" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</merge>